Fix missing remove icon on a tile on tablets in horizontal position

--- a/src/components/product-tile/product-tile.scss
+++ b/src/components/product-tile/product-tile.scss
@@ -126,7 +126,6 @@ $product-tile_wishlist-actions-justify-content: space-between !default;
 $product-tile_wishlist-remove-icon-background: $color_background-200 !default;
 $product-tile_wishlist-remove-icon-size: 1.2rem !default;
 $product-tile_wishlist-remove-icon-fill: $color_border-700 !default;
-$product-tile_wishlist-remove-icon-visibility-breakpoint: $product-tile-grid_hover-animation-breakpoint !default;
 
 // Description
 $product-tile_description-font-size: 1.3rem !default;
@@ -1115,16 +1114,13 @@ $product-tile-magento-catalog-image-height: to-number(
         position: absolute;
         top: 0;
         right: 0;
-        width: 3rem;
-        height: 3rem;
         background: $product-tile_wishlist-remove-icon-background;
         display: flex;
         justify-content: center;
         align-items: center;
+        padding: $product-tile-grid_padding;
 
-        @include media(
-            $product-tile_wishlist-remove-icon-visibility-breakpoint
-        ) {
+        @media (pointer: fine) {
             display: none;
         }
     }
